Updated translation to spanish and added new loading screen

--- a/app/assets/lang/es_ES.toml
+++ b/app/assets/lang/es_ES.toml
@@ -3,7 +3,7 @@
 updateAvailableTooltip = "Actualización disponible"
 usernamePlaceholder = "Nombre de usuario"
 usernameEditButton = "Editar"
-settingsTooltip = "Configuraciónes"
+settingsTooltip = "Configuración"
 serverStatus = "SERVIDOR"
 serverStatusPlaceholder = "DESCONECTADO"
 mojangStatus = "ESTADO DE MOJANG"
@@ -15,8 +15,8 @@ launchButtonPlaceholder = "&#8226; Ningún servidor seleccionado"
 launchDetails = "Por favor espere.."
 newsNavigationStatus = "{currentPage} de {totalPages}"
 newsErrorLoadSpan = "Buscando nuevas noticias.."
-newsErrorFailedSpan = "Fallo al cargar las noticias"
-newsErrorRetryButton = "Intenta denuevo"
+newsErrorFailedSpan = "Hay un error en cargar las noticias"
+newsErrorRetryButton = "Intenta de vuelta"
 newsErrorNoneSpan = "No hay noticias"
 
 [ejs.login]
@@ -59,13 +59,13 @@ navLauncher = "Launcher"
 navAbout = "Acerca de"
 navUpdates = "Actualizaciones"
 navDone = "Listo"
-tabAccountHeaderText = "Configuracion de Cuenta"
+tabAccountHeaderText = "Configuración de Cuenta"
 tabAccountHeaderDesc = "Agrega una nueva cuenta o administre las existentes"
 microsoftAccount = "Microsoft"
 addMicrosoftAccount = "+ Añadir cuenta de Microsoft"
 mojangAccount = "Mojang"
 addMojangAccount = "+ Añadir cuenta de Mojang"
-minecraftTabHeaderText = "Configuraciones de Minecraft"
+minecraftTabHeaderText = "Configuraciónes de Minecraft"
 minecraftTabHeaderDesc = "Opciones relacionadas con el inicio del juego."
 gameResolutionTitle = "Resolución del juego"
 launchFullscreenTitle = "Iniciar en pantalla completa."
@@ -81,7 +81,7 @@ dropinMods = "Suelta los Mods"
 addMods = "Agregar Mods"
 dropinRefreshNote = "(F5 para recargar)"
 shaderpacks = "Shaderpacks"
-shaderpackDesc = "Activar o desactivar shaders. Tenga en cuenta que los shaders funcionan sin problemas en configuraciones potentes. Puede agregar paquetes personalizados aquí."
+shaderpackDesc = "Activar o desactivar shaders. Tenga en cuenta que los shaders funcionan sin problemas en configuraciónes potentes. Puede agregar paquetes personalizados aquí."
 selectShaderpack = "Seleciona un Shaderpack"
 tabJavaHeaderText = "Configuraciones de Java"
 tabJavaHeaderDesc = "Administra las configuraciones de Java (avanzado)."
@@ -217,7 +217,7 @@ joining = "Sailing to Westeros!" # IDK how to translate this xD
 joined = "Explora el Realm!"
 
 [js.overlay]
-dismiss = "Dismiss"
+dismiss = "Rechazar"
 
 [js.settings.fileSelectors]
 executables = "Ejecutables"
