errors from landing

--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -4,7 +4,7 @@
 title = "Thunder Launcher"
 
 [ejs.landing]
-mediaGitHubURL = "#"
+mediaGitHubURL = "https://thunderstudio.vercel.com"
 mediaTwitterURL = "https://x.com/ThunderStudio_"
 mediaInstagramURL = "#"
 mediaYouTubeURL = "https://www.youtube.com/@thunderstudio_"
