--- a/app/assets/lang/es_ES.toml
+++ b/app/assets/lang/es_ES.toml
@@ -5,7 +5,7 @@ usernamePlaceholder = "Nombre de usuario"
 usernameEditButton = "Editar"
 settingsTooltip = "Configuración"
 serverStatus = "SERVIDOR"
-serverStatusPlaceholder = "DESCONECTADO"
+serverStatusPlaceholder = "Sin Servicio"
 mojangStatus = "ESTADO DE MOJANG"
 mojangStatusTooltipTitle = "Servicios"
 mojangStatusNETitle = "Non&nbsp;Essential"
